Fix hr display on mobile.

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -1128,6 +1128,7 @@ input[type='text']:focus {
 
       hr {
         width: 95%;
+        margin-top: 35px;
       }
     }
 
